# curseforge-api-rs

./: Cargo.toml
src/: error.rs  lib.rs
src/curseforge/: api.rs  error.rs  mod.rs
src/curseforge/client/: builder.rs  client.rs  mod.rs
src/curseforge/schemas/: categories.rs  files.rs  games.rs  mod.rs  mod_loader.rs  mods.rs  pagination.rs  parameters.rs  response.rs  versions.rs
