[package]
name = "curseforge-api"
version = "0.25.421"
edition = "2024"

[lib]
path = "./src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "stream", "blocking", "socks"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
serde_repr = "0.1.20"
